--- a/1-intro/package.json
+++ b/1-intro/package.json
@@ -8,7 +8,8 @@
   "dependencies": {
     "@slidev/cli": "^0.27.20",
     "@slidev/theme-default": "*",
-    "@slidev/theme-seriph": "*"
+    "@slidev/theme-seriph": "^0.21.1",
+    "slidev-theme-purplin": "^1.1.0"
   },
   "name": "1-intro"
 }
