--- a/1-intro/package.json
+++ b/1-intro/package.json
@@ -9,7 +9,12 @@
     "@slidev/cli": "^0.27.20",
     "@slidev/theme-default": "*",
     "@slidev/theme-seriph": "^0.21.1",
+    "slidev-theme-geist": "^0.6.0",
+    "slidev-theme-penguin": "^1.3.4",
     "slidev-theme-purplin": "^1.1.0"
   },
-  "name": "1-intro"
+  "name": "1-intro",
+  "devDependencies": {
+    "vite-plugin-vue-type-imports": "^0.1.3"
+  }
 }
