--- a/1-intro/package.json
+++ b/1-intro/package.json
@@ -15,6 +15,7 @@
   },
   "name": "1-intro",
   "devDependencies": {
+    "playwright-chromium": "^1.17.1",
     "vite-plugin-vue-type-imports": "^0.1.3"
   }
 }
