change geist -> vuetiful

--- a/1-intro/package.json
+++ b/1-intro/package.json
@@ -11,7 +11,8 @@
     "@slidev/theme-seriph": "^0.21.1",
     "slidev-theme-geist": "^0.6.0",
     "slidev-theme-penguin": "^1.3.4",
-    "slidev-theme-purplin": "^1.1.0"
+    "slidev-theme-purplin": "^1.1.0",
+    "slidev-theme-vuetiful": "^0.1.0"
   },
   "name": "1-intro",
   "devDependencies": {
